profiles setting page completely materialized, navbar fixed, small screen dropdown button vertically aligned

--- a/app/assets/stylesheets/alert_messages.scss
+++ b/app/assets/stylesheets/alert_messages.scss
@@ -1,6 +1,6 @@
 #flash {
   position: absolute;
-  top: 7em;
+  top: 90px;
   left: 0;
   width: 90%;
   z-index: 5000;
@@ -12,7 +12,7 @@
 #error_explanation {
   position: fixed;
   max-width: 450px;
-  top: 7em;
+  top: 90px;
   z-index: 5000;
   border: 2px solid red;
   padding: 7px;
