--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -18,8 +18,9 @@
 //}
 
 .top-nav {
-  height: 7em;
+  height: 90px;
   box-shadow: none;
+  padding-left: 30px;
 }
 
 .nav-tabs {
