--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -22,3 +22,25 @@
 .profile-show {
   max-width: 600px;
 }
+
+.form-head {
+  height: 18vh;
+  background-color: #e0e0e0;
+}
+
+.form-head img {
+  margin: 10px 15px;
+}
+
+.form-head .input-field {
+  margin-top: 3rem;
+}
+
+.form-body {
+  padding: 0 60px 30px;
+  margin-top: 15vh;
+}
+
+.unhappy a {
+  color: #ef9a9a;
+}
