--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -4,7 +4,7 @@
 //    display: block !important;
 //  }
   .side-nav {
-    top: 7em !important;
+    top: 90px !important;
   }
 
   .content_wrapper {
